--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "bytetech",
-  "version": "2.1.0",
-  "description": "-- AWESOMENESS --",
+  "//1": "describes your app and its dependencies",
+  "//2": "https://docs.npmjs.com/files/package.json",
+  "//3": "updating this file will download and update your packages",
+  "name": "hello-express",
+  "version": "0.0.1",
+  "description": "A simple Node app built on Express, instantly up and running.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "canvas": "^1.6.10",
-    "dateformat": "^3.0.3",
-    "discord.js": "^11.3.2",
-    "express": "^4.16.3",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-binaries": "^3.2.2",
-    "fs": "0.0.2",
-    "get-youtube-id": "^1.0.0",
-    "jimp": "^0.2.28",
-    "moment": "^2.22.1",
-    "ms": "^2.1.1",
-    "node-opus": "^0.3.1",
-    "opusscript": "0.0.6",
-    "request": "^2.85.0",
-    "simple-youtube-api": "^5.0.2",
-    "snekfetch": "^3.6.4",
-    "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.20.4"
+    "express": "^4.16.4",
+    "discord.js": "^11.4.2",
+    "ytdl-core": "^0.29.0",
+    "youtube-node": "^1.3.3",
+    "get-youtube-id": "^1.0.1",
+    "youtube-info": "^1.3.2",
+    "simple-youtube-api": "^5.1.1",
+    "gif-search": "^2.0.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-bin": "^0.0.1",
+    "opusscript": "^0.0.6"
   },
   "engines": {
-    "node": "8.4.0"
-  }
+    "node": "8.x"
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/hello-express"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
