--- a/package.json
+++ b/package.json
@@ -11,17 +11,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "discord.js": "^11.4.2",
-    "ytdl-core": "^0.29.0",
-    "youtube-node": "^1.3.3",
-    "get-youtube-id": "^1.0.1",
-    "youtube-info": "^1.3.2",
-    "simple-youtube-api": "^5.1.1",
-    "gif-search": "^2.0.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-bin": "^0.0.1",
-    "opusscript": "^0.0.6"
+    "discord.js": "^11.4.2"
   },
   "engines": {
     "node": "8.x"
